unpackaged/main/default/objects/ETT_Apex_Error_log__c/ETT_Apex_Error_log__c.object-meta.xml
<CustomObject>
    <label>Apex Error log</label>
    <nameField>
        <displayFormat>ApexErrorLog-{00000}</displayFormat>
        <label>Apex Error log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>