unpackaged/main/default/objects/ETT_Apex_Error_log__c/fields/ETT_Class__c.field-meta.xml
<CustomField>
    <fullName>ETT_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>