unpackaged/main/default/objects/ETT_Apex_Error_log__c/fields/ETT_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Line_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>