unpackaged/main/default/objects/ETT_Apex_Error_log__c/fields/ETT_Log_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Log_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>