unpackaged/main/default/objects/ETT_Apex_Error_log__c/fields/ETT_S_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>ETT_S_Object_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>S Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>